--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  animate_do: ^3.0.2
+  google_fonts: ^4.0.3
+  dio: ^5.0.0
+  pretty_dio_logger: ^1.3.1
+  freezed: ^2.3.2
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.0
+  retrofit: ^4.0.1
+  flutter_bloc: ^8.1.2
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  json_serializable: ^6.6.1
+  build_runner: ^2.3.3
+  retrofit_generator: '>=5.0.0 <6.0.0'
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
