--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   retrofit: ^4.0.1
   flutter_bloc: ^8.1.2
   shared_preferences: ^2.0.18
+  faker: ^2.1.0
+  moment_dart: ^0.17.2
+  flutter_quill: ^7.0.1
 
 dev_dependencies:
   flutter_test:
